--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm i
 
       - name: build
-        run: STAGE= dev npm run build
+        run: STAGE= npm run build
 
       - name: copy files to s3
         run: aws s3 sync ./dist s3://reimbursement-client
