--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: s3 deployment
 
 on:
   push:
-    branches: [main] # the branch we want this to run on
+    branches: [<environment>] # the branch we want this to run on
 
 jobs:
   build:
@@ -34,10 +34,10 @@ jobs:
         run: STAGE= npm run build
 
       - name: copy files to s3
-        run: aws s3 sync ./build s3://reimbursement-client
+        run: aws s3 sync ./build s3://<bucket_name>
 
       - name: invalidate  cache
         run: |
           aws cloudfront create-invalidation \
-            --distribution-id EW3OI3BGRHG6L \
+            --distribution-id <distribution_id> \
             --paths "/*"
